--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "milanlearns",
+  "homepage": "https://basmil159.github.io/lengeman",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
