--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
-    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.56.0",
     "save": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
