--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lengeman",
-  "homepage": "https://basmil159.github.io/lengeman",
+  "homepage": "https://basmil159.github.io/lengeman/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
